syntax="proto3";

package web_page_service;
option go_package="genproto/web_page_service";

import "web_page.proto";
import "folder.proto";
import "commit.proto";